--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -35,6 +35,7 @@ jobs:
           # 推荐把邮箱和密码存在 GitHub Secrets 里，不要明文写在这里
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+          UNITY_LICENSING_SERVER: https://license.unity3d.com
 
       # 4. 执行构建 Windows 版本
       - name: Build Windows Project
