--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -29,20 +29,15 @@ jobs:
             Library-Unity-
 
       # 3. 激活 Unity License (使用 Personal 版自动激活)
-      - name: Activate Unity License
-        uses: game-ci/unity-activate@v2
-        env:
-          # 推荐把邮箱和密码存在 GitHub Secrets 里，不要明文写在这里
+      - name: Activate Unity
+        uses: game-ci/activate@v2
+        with:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-          UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
 
       # 4. 执行构建 Windows 版本
       - name: Build Windows Project
         uses: game-ci/unity-builder@v4
-        env:
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: StandaloneWindows64
           buildName: 情绪碎片 # 打包出来的文件夹名字
