--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -29,8 +29,8 @@ jobs:
             Library-Unity-
 
       # 3. 激活 Unity License (使用 Personal 版自动激活)
-      - name: Activate Unity
-        uses: game-ci/activate@v2
+      - name: Activate Unity License
+        uses: game-ci/unity-activate@v2
         with:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
