--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+          UNITY_VERSION: 2021.3.16f1
 
       # 4. 执行构建 Windows 版本
       - name: Build Windows Project
